# dmg-forensic

./: .gitleaks.toml  Cargo.toml  README.md  mkdocs.yml  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  release-plz.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/tests/: binary.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  sparse.rs  vfs.rs
core/tests/: fuzz_regression.rs  sparse_images.rs
core/tests/data/: README.md  hfsplus_adc.dmg  hfsplus_udro.dmg  synthetic.sparseimage
core/tests/data/synthetic.sparsebundle/: Info.plist
core/tests/data/synthetic.sparsebundle/bands/: 0
corpus/: fetch.sh
dmg/: Cargo.toml
dmg/src/: lib.rs
dmg/tests/: corpus.rs  real_images.rs
dmg/tests/data/: hfsplus_bzip2.dmg  hfsplus_lzfse.dmg  hfsplus_lzma.dmg
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-reader-analyzer-two-crate-split.md  0002-crate-naming-dmg-core-import-dmg.md  0003-analyzer-parses-raw-koly-independent-of-core.md  0004-pure-rust-udif-codecs-zero-c-deps.md  0005-sparse-image-readers-behind-read-seek.md  0006-optional-vfs-imagesource-feature.md  0007-msrv-floor-below-dev-toolchain.md  0008-release-plz-library-publishing.md
forensic/: Cargo.toml
forensic/src/: lib.rs
forensic/tests/: audit.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_open.rs  fuzz_sparse.rs
supply-chain/: config.toml
