[workspace]
resolver = "2"
members = ["core", "forensic", "cli"]

# Single source of truth for fields shared by every member (DRY): bump version /
# MSRV / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/dmg-forensic"

[workspace.dependencies]
# Fleet members (path within the workspace; registry version for publish).
dmg-core = { path = "core", version = "0.1.2" }
forensicnomicon = "1"
thiserror = "2"
tempfile  = "3"
quick-xml = "0.41"
base64    = "0.22"
flate2    = "1"
# Pure-Rust block codecs for UDIF compressed blocks (no C deps): bzip2 (UDBZ),
# LZMA (ULMO), LZFSE (ULFO). zlib (UDZO) uses flate2; ADC is decoded in-crate.
bzip2-rs   = "0.1.2"
lzma-rs    = "0.3.0"
lzfse_rust = "0.2.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap      = "allow"
cast_sign_loss          = "allow"
