[package]
name        = "dmg-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust forensic Apple Disk Image (DMG/UDIF) reader"
homepage    = "https://github.com/SecurityRonin/dmg-forensic"
documentation = "https://docs.rs/dmg-core"
authors     = ["Albert Hui"]
keywords    = ["forensics", "dmg", "disk-image", "apple", "udif"]
categories  = ["parser-implementations", "filesystem"]
# Test fixtures (multi-hundred-KB DMGs) and fuzz harness are dev-only.
exclude = ["tests/", "../fuzz/", ".github/"]

[lib]
name = "dmg"
path = "src/lib.rs"

[features]
# Implement the forensic-vfs ImageSource contract so a decoded DMG composes
# directly into the fleet VFS. Off by default (optional forensic-vfs dep).
vfs = ["dep:forensic-vfs"]

[dependencies]
thiserror = { workspace = true }
quick-xml = { workspace = true }
base64    = { workspace = true }
flate2    = { workspace = true }
bzip2-rs   = { workspace = true }
lzma-rs    = { workspace = true }
lzfse_rust = { workspace = true }
forensic-vfs = { version = "0.1", optional = true }

[dev-dependencies]
tempfile  = { workspace = true }

[lints]
workspace = true
