[package]
name        = "dmg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust forensic Apple Disk Image (DMG/UDIF) reader"
homepage    = "https://github.com/SecurityRonin/dmg"
documentation = "https://docs.rs/dmg"
authors     = ["Albert Hui"]
keywords    = ["forensics", "dmg", "disk-image", "apple", "udif"]
categories  = ["parser-implementations", "filesystem"]

[dependencies]
thiserror = { workspace = true }
quick-xml = { workspace = true }
base64    = { workspace = true }
flate2    = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }

[lints]
workspace = true
